[ALPS05564917] MT6877: Porting platform code
Porting platform code in kernel

MTK-Commit-Id: a8ef7f8cbdb548343d7012ecd24f660299c9fc07

Change-Id: Ibb03d65b1cd3843b5212fc5e1ba1f42f349219b3
Signed-off-by: vikas saharawat <vikas.saharawat@mediatek.com>
CR-Id: ALPS05564917
Feature:[Module]Kernel Maintenance

--- a/drivers/misc/mediatek/freqhopping/fhctl_new/Makefile
+++ b/drivers/misc/mediatek/freqhopping/fhctl_new/Makefile
@@ -4,7 +4,8 @@ fhctl-y += clk-fhctl-ap.o
 fhctl-y += clk-fhctl-pll.o
 ifeq (y,$(filter y, \
 			$(CONFIG_MACH_MT6833) \
-			$(CONFIG_MACH_MT6853)))
+			$(CONFIG_MACH_MT6853) \
+			$(CONFIG_MACH_MT6877)))
 ifeq ($(CONFIG_MTK_TINYSYS_MCUPM_SUPPORT), y)
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/mcupm/$(MTK_PLATFORM)/
 ccflags-y += -DUSE_FHCTL_MCUPM
