--- a/drivers/misc/mediatek/performance/eara_thermal/Makefile
+++ b/drivers/misc/mediatek/performance/eara_thermal/Makefile
@@ -17,14 +17,20 @@ MTK_TOP = $(srctree)/drivers/misc/mediatek/
 EARA_THRM_TOP = $(srctree)/drivers/misc/mediatek/performance/eara_thermal
 FPSGO_TOP = $(srctree)/drivers/misc/mediatek/performance/fpsgo_v3/
 
+ifeq ($(CONFIG_MACH_MT6877),y)
+obj-y += platform/mt6877/thermal_budget_platform.o
+else
 obj-y += platform/$(MTK_PLATFORM)/thermal_budget_platform.o
+endif
 obj-y += thermal_budget.o
 obj-y += thermal_base.o
 
 ccflags-y += -I$(MTK_TOP)/thermal/common/inc/
+ccflags-$(CONFIG_MACH_MT6877) += -I$(MTK_TOP)/thermal/mt6877/inc/
 ccflags-y += -I$(MTK_TOP)/thermal/$(MTK_PLATFORM)/inc/
 ccflags-y += -I$(MTK_TOP)/base/power/$(MTK_PLATFORM)/
 ccflags-y += -I$(MTK_TOP)/base/power/include/
+ccflags-$(CONFIG_MACH_MT6877) += -I$(MTK_TOP)/base/power/ppm_v3/src/mach/mt6877/
 ccflags-y += -I$(MTK_TOP)/base/power/ppm_v3/src/mach/$(MTK_PLATFORM)/
 ccflags-y += -I$(MTK_TOP)/base/power/ppm_v3/inc/
 ccflags-y += -I$(FPSGO_TOP)/
