--- a/drivers/devfreq/helio-dvfsrc-v3/Makefile
+++ b/drivers/devfreq/helio-dvfsrc-v3/Makefile
@@ -61,6 +61,8 @@ obj-$(CONFIG_MACH_MT6885) += helio-dvfsrc-opp-mt6885.o helio-dvfsrc-mt6885.o hel
 obj-$(CONFIG_MACH_MT6873) += helio-dvfsrc-opp-mt6873.o helio-dvfsrc-mt6873.o helio-dvfsrc-ip-v2.o helio-dvfsrc-smc-control.o
 ifeq ($(CONFIG_MTK_DVFSRC_MT6833_PRETEST),y)
 obj-$(CONFIG_MTK_DVFSRC_MT6833_PRETEST) += helio-dvfsrc-opp-mt6833.o helio-dvfsrc-mt6833.o helio-dvfsrc-ip-v2.o helio-dvfsrc-smc-control.o
+else ifeq ($(CONFIG_MTK_DVFSRC_MT6877_PRETEST),y)
+obj-$(CONFIG_MTK_DVFSRC_MT6877_PRETEST) += helio-dvfsrc-opp-v6877.o helio-dvfsrc-v6877.o helio-dvfsrc-ip-v2.o helio-dvfsrc-smc-control.o
 else
 obj-$(CONFIG_MACH_MT6853) += helio-dvfsrc-opp-mt6853.o helio-dvfsrc-mt6853.o helio-dvfsrc-ip-v2.o helio-dvfsrc-smc-control.o
 endif
