--- a/drivers/misc/mediatek/thermal/common/thermal_zones/Makefile
+++ b/drivers/misc/mediatek/thermal/common/thermal_zones/Makefile
@@ -7,6 +7,8 @@ ifeq ($(CONFIG_MACH_MT6833),y)
 	PDIR = mt6833
 else ifeq ($(CONFIG_MACH_MT6893),y)
 	PDIR = mt6893
+else ifeq ($(CONFIG_MACH_MT6877),y)
+	PDIR = mt6877
 else
 	PDIR = $(MTK_PLATFORM)
 endif
@@ -28,7 +30,11 @@ ifeq ($(CONFIG_MTK_TINYSYS_SSPM_SUPPORT),y)
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/sspm
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/sspm/v1
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/sspm/$(MTK_PLATFORM)
+ifeq ($(CONFIG_MACH_MT6877),y)
+ccflags-y  += -I$(srctree)/drivers/misc/mediatek/mcupm/$(MTK_PLATFORM)
+else
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/mcupm/$(PDIR)
+endif
 endif
 
 ifneq (,$(filter $(CONFIG_MTK_PLATFORM), "mt6735"))
