--- a/drivers/misc/mediatek/usb_boost/Makefile
+++ b/drivers/misc/mediatek/usb_boost/Makefile
@@ -6,4 +6,5 @@ obj-$(CONFIG_MACH_MT6768) += v1/
 obj-$(CONFIG_MACH_MT6785) += v1/
 obj-$(CONFIG_MACH_MT6853) += v1/
 obj-$(CONFIG_MACH_MT6873) += v1/
+obj-$(CONFIG_MACH_MT6877) += v1/
 obj-$(CONFIG_MACH_MT6885) += v1/
