--- a/arch/arm64/configs/k6893v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6893v1_64_debug_defconfig
@@ -233,6 +233,9 @@ CONFIG_MTK_VIBRATOR=y
 CONFIG_MTK_SYNC=y
 CONFIG_MTK_VPU_SUPPORT=y
 CONFIG_MTK_VPU_SUPPORT_DEBUG=y
+CONFIG_MTK_VOW_SUPPORT=y
+CONFIG_MTK_VOW_DUAL_MIC_SUPPORT=y
+CONFIG_MTK_VOW_MAX_PDK_NUMBER=2
 CONFIG_MTK_VOW_DSP_VERSION="ver02"
 CONFIG_MTK_DRAM_LOG_STORE=y
 CONFIG_MTK_DRAM_LOG_STORE_ADDR=0x0011DF00
@@ -334,6 +337,7 @@ CONFIG_MTK_UAC_POWER_SAVING=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_MT6885_MT6359=y
 CONFIG_SND_SOC_MTK_BTCVSD=y
+CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
 CONFIG_SND_SOC_MTK_AUDIO_DSP=y
 CONFIG_SND_SOC_TFA9874=y
 CONFIG_HIDRAW=y
