[ALPS05595784] display: support nt36672c
[Detail]
support panel of nt36672c, fhdplus, 90hz, cphy
vfp solution

MTK-Commit-Id: 97a43ead7f2550d0da2bd351d4121082030e9c1a

Change-Id: Ia59eab020cbaa20b1556d56f0acda6b3f7018512
Signed-off-by: Cui Zhang <cui.zhang@mediatek.com>
CR-Id: ALPS05595784
Feature: Display Driver (DSI Interface)
(cherry picked from commit 41f6afca1ccd28b45d711e8d05d52ad7e92893a8)

--- a/drivers/gpu/drm/panel/Makefile
+++ b/drivers/gpu/drm/panel/Makefile
@@ -31,6 +31,7 @@ obj-$(CONFIG_DRM_PANEL_TIANMA_R66451_CMD_120HZ_NO_MIPI_SWITCH) += panel-tianma-r
 obj-$(CONFIG_DRM_PANEL_TRULY_TD4330_VDO_FAKE_WCG) += panel-truly-td4330-vdo-fake-wcg.o
 obj-$(CONFIG_DRM_PANEL_TIANMA_R66451_CMD_120HZ) += panel-tianma-r66451-cmd-120hz.o
 obj-$(CONFIG_DRM_PANEL_TIANMA_NT36672C_CPHY_VDO) += panel-tianma-nt36672c-cphy-vdo.o
+obj-$(CONFIG_DRM_PANEL_TIANMA_NT36672C_CPHY_VDO_90HZ_RT4801) += panel-tianma-nt36672c-cphy-vdo-90hz-rt4801.o
 obj-$(CONFIG_DRM_PANEL_JDI_NT36672C_CPHY_VDO) += panel-jdi-nt36672c-cphy-vdo.o
 obj-$(CONFIG_DRM_PANEL_ALPHA_TIANMA_NT36672C_CPHY_VDO) += panel-alpha-tianma-nt36672c-cphy-vdo.o
 obj-$(CONFIG_DRM_PANEL_ALPHA_JDI_NT36672C_CPHY_VDO) += panel-alpha-jdi-nt36672c-cphy-vdo.o
