[ALPS05595784] display: support nt36672c jdi
[Detail]
support panel of nt36672c jdi fhd+90hz, vdo, rt4801

MTK-Commit-Id: 22aa5ec9bbaee285cbd7579fe815df50d5fec25a

Change-Id: I7d126570d5d6a44b3427083a612b1217837195cc
Signed-off-by: Cui Zhang <cui.zhang@mediatek.com>
CR-Id: ALPS05595784
Feature: Display Driver (DSI Interface)
(cherry picked from commit 9f2098b46d30924e8272a2ea524904552c83c4ba)

--- a/drivers/gpu/drm/panel/Makefile
+++ b/drivers/gpu/drm/panel/Makefile
@@ -33,8 +33,10 @@ obj-$(CONFIG_DRM_PANEL_TIANMA_R66451_CMD_120HZ) += panel-tianma-r66451-cmd-120hz
 obj-$(CONFIG_DRM_PANEL_TIANMA_NT36672C_CPHY_VDO) += panel-tianma-nt36672c-cphy-vdo.o
 obj-$(CONFIG_DRM_PANEL_TIANMA_NT36672C_CPHY_VDO_90HZ_RT4801) += panel-tianma-nt36672c-cphy-vdo-90hz-rt4801.o
 obj-$(CONFIG_DRM_PANEL_JDI_NT36672C_CPHY_VDO) += panel-jdi-nt36672c-cphy-vdo.o
+obj-$(CONFIG_DRM_PANEL_JDI_NT36672C_CPHY_VDO_90HZ_RT4801) += panel-jdi-nt36672c-cphy-vdo-90hz-rt4801.o
 obj-$(CONFIG_DRM_PANEL_ALPHA_TIANMA_NT36672C_CPHY_VDO) += panel-alpha-tianma-nt36672c-cphy-vdo.o
 obj-$(CONFIG_DRM_PANEL_ALPHA_JDI_NT36672C_CPHY_VDO) += panel-alpha-jdi-nt36672c-cphy-vdo.o
+obj-$(CONFIG_DRM_PANEL_ALPHA_JDI_NT36672C_CPHY_VDO_90HZ_RT4801) += panel-alpha-jdi-nt36672c-cphy-vdo-90hz-rt4801.o
 obj-$(CONFIG_DRM_PANEL_K6873V1_64_ALPHA_VDO_01) += k6873v1_64_alpha/panel-k6873v1-64-alpha-vdo-01.o
 obj-$(CONFIG_DRM_PANEL_K6873V1_64_ALPHA_VDO_02) += k6873v1_64_alpha/panel-k6873v1-64-alpha-vdo-02.o
 obj-$(CONFIG_DRM_PANEL_HX_NT36682C_DPHY_VDO) += panel-hx-nt36682c-dphy-vdo.o
