--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -516,6 +516,17 @@ config DRM_PANEL_TIANMA_NT36672C_CPHY_VDO_90HZ_RT4801
 	  and uses 24-bits RGB per pixel. It provides a MIPI DSI interface
 	  to host.
 
+config DRM_PANEL_TIANMA_NT36672C_CPHY_VDO_90HZ_RT4801_HFP
+	tristate "TIANMA  FHD+ CPHY vdo mode panel 90hz rt4801 hfp solution"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for TIANMA NT36672C CPHY vdo
+	  mode of 90hz Full HD Plus panel. The panel has a 1080x2400 resolution
+	  and uses 24-bits RGB per pixel. It provides a MIPI DSI interface
+	  to host. Switch 90hz by hfp solution.
+
 config DRM_PANEL_JDI_NT36672C_CPHY_VDO
 	tristate "JDI  FHD+ CPHY vdo mode panel"
 	depends on OF
@@ -548,6 +559,28 @@ config DRM_PANEL_ALPHA_JDI_NT36672C_CPHY_VDO
 	  CPHY vdo mode Full HD Plus panel. The panel has a 1080x2400
 	  resolution and uses 24-bits RGB per pixel. It provides a
 	  MIPI DSI interface to host.
+
+config DRM_PANEL_JDI_NT36672C_CPHY_VDO_90HZ_RT4801
+	tristate "JDI FHD+ CPHY vdo mode 90hz panel"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for JDI NT36672C 90hz
+	  CPHY vdo mode Full HD Plus panel. The panel has a 1080x2400
+	  resolution and uses 24-bits RGB per pixel. It provides a
+	  MIPI DSI interface to host.
+
+config DRM_PANEL_JDI_NT36672C_CPHY_VDO_90HZ_RT4801_HFP
+	tristate "JDI FHD+ CPHY vdo mode 90hz panel of hfp solution"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for JDI NT36672C 90hz
+	  CPHY vdo mode Full HD Plus panel. The panel has a 1080x2400
+	  resolution and uses 24-bits RGB per pixel. It provides a
+	  MIPI DSI interface to host. Switch 90hz by hfp solution.
 
 config DRM_PANEL_TIANMA_NT36672C_VDO_120HZ
 	tristate "TIANMA FHD+ vdo mode 120 HZ panel"
