[ALPS05485788] usb: sync. FPGA patch
[Detail]
Cherry-pick FPGA related patch

MTK-Commit-Id: 3fed6b3ee6f43353cec8d9eee89bc98668a70e3f

Change-Id: I02b6c72a041c70485af5a04881ff77218e5f952d
Signed-off-by: chihhao.chen <chihhao.chen@mediatek.com>
CR-Id: ALPS05485788
Feature: [Module]USB 2.0

--- a/drivers/phy/mediatek/Makefile
+++ b/drivers/phy/mediatek/Makefile
@@ -3,6 +3,7 @@
 #
 
 obj-$(CONFIG_PHY_MTK_TPHY)		+= phy-mtk-tphy.o
+obj-$(CONFIG_PHY_MTK_FPGAPHY)		+= phy-mtk-fpga.o
 
 ifeq ($(CONFIG_PHY_MTK_USB),y)
 obj-y					+= phy-mtk.o
