--- a/arch/arm64/configs/k6877v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6877v1_64_debug_defconfig
@@ -23,6 +23,7 @@ CONFIG_MODULE_SRCVERSION_ALL=y
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
 CONFIG_CFQ_GROUP_IOSCHED=y
+CONFIG_MACH_MT6877=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_PREEMPT=y
@@ -125,6 +126,7 @@ CONFIG_CUSTOM_KERNEL_UNCALI_MAG_SENSOR=y
 CONFIG_CUSTOM_KERNEL_STEP_COUNTER=y
 CONFIG_CUSTOM_KERNEL_SENSORHUB=y
 CONFIG_MTK_COMBO=y
+CONFIG_MTK_COMBO_CHIP_CONSYS_6877=y
 CONFIG_MTK_COMBO_GPS=y
 CONFIG_MTK_COMBO_WIFI=y
 CONFIG_MTK_DHCPV6C_WIFI=y
@@ -299,6 +301,7 @@ CONFIG_MTK_UAC_POWER_SAVING=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_MTK_BTCVSD=y
 CONFIG_SND_SOC_MTK_AUDIO_DSP=y
+CONFIG_SND_SOC_RT5512=y
 CONFIG_HIDRAW=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_APPLE=y
@@ -372,6 +375,19 @@ CONFIG_ION=y
 CONFIG_MTK_ION=y
 CONFIG_NANOHUB=y
 CONFIG_NANOHUB_MTK_IPI=y
+CONFIG_COMMON_CLK_MT6877_APU=y
+CONFIG_COMMON_CLK_MT6877_AUDIOSYS=y
+CONFIG_COMMON_CLK_MT6877_CAM=y
+CONFIG_COMMON_CLK_MT6877_IMG=y
+CONFIG_COMMON_CLK_MT6877_I2C=y
+CONFIG_COMMON_CLK_MT6877_IPESYS=y
+CONFIG_COMMON_CLK_MT6877_MDPSYS=y
+CONFIG_COMMON_CLK_MT6877_MFGCFG=y
+CONFIG_COMMON_CLK_MT6877_DISPSYS=y
+CONFIG_COMMON_CLK_MT6877_MSDC=y
+CONFIG_COMMON_CLK_MT6877_SCP_ADSP=y
+CONFIG_COMMON_CLK_MT6877_VDE=y
+CONFIG_COMMON_CLK_MT6877_VEN=y
 CONFIG_MAILBOX=y
 CONFIG_MTK_CMDQ_MBOX=y
 CONFIG_MTK_RPMSG_MBOX=y
@@ -390,6 +406,7 @@ CONFIG_MT635X_AUXADC=y
 CONFIG_PWM=y
 CONFIG_PWM_MTK_DISP=y
 CONFIG_PHY_MTK_USB=y
+CONFIG_EXT4_DEBUG=y
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
 CONFIG_INCREMENTAL_FS=y
@@ -418,6 +435,8 @@ CONFIG_PAGE_OWNER=y
 CONFIG_DEBUG_SECTION_MISMATCH=y
 CONFIG_DEBUG_PAGEALLOC=y
 CONFIG_DEBUG_PAGEALLOC_ENABLE_DEFAULT=y
+CONFIG_DEBUG_OBJECTS=y
+CONFIG_DEBUG_OBJECTS_TIMERS=y
 CONFIG_SLUB_DEBUG_ON=y
 CONFIG_DEBUG_KMEMLEAK=y
 CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=6400
