--- a/arch/arm64/boot/dts/mediatek/mt6877.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6877.dts
@@ -2186,6 +2186,8 @@
 			 <0x0870 0x00100000 20>;
 		dqopen = <0x0870 0x00200000 21>,
 			 <0x0870 0x00200000 21>;
+		ckdiv4_ca = <0x0B74 0x00000004 2>,
+			 <0x0B74 0x00000004 2>;
 	};
 
 	dramc_ch0_top0@10230000 {
