--- a/drivers/misc/mediatek/base/power/swpm_v1/mt6768/Makefile
+++ b/drivers/misc/mediatek/base/power/swpm_v1/mt6768/Makefile
@@ -23,7 +23,11 @@ ccflags-y += \
 
 ifeq ($(CONFIG_MTK_TINYSYS_SSPM_SUPPORT), y)
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/
+ifneq ($(CONFIG_MTK_TINYSYS_SSPM_VERSION),"")
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/$(CONFIG_MTK_TINYSYS_SSPM_VERSION)
+else
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/$(CONFIG_MTK_PLATFORM)
+endif
 endif
 
 obj-y += mtk_swpm_platform.o
