[ALPS05482391] arm64: config: mt6877: rt5133 enable compile option
1. Enable rt5133 compile option

MTK-Commit-Id: e3d52882ed67cc5d619c106d12d2c94cd7e0ddbf

Change-Id: I4ea8b8975f014ba0c15c57c2f051ab5e5d958ce0
Signed-off-by: vend_tina_yang001 <vend_tina_yang001@mediatek.com>
CR-Id: ALPS05482391
Feature: Regulator(regulator)

--- a/arch/arm64/configs/k6877v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6877v1_64_debug_defconfig
@@ -269,6 +269,7 @@ CONFIG_MTK_MFD_SPMI_PMIC=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_MT6315=y
 CONFIG_REGULATOR_MT6359P=y
+CONFIG_REGULATOR_RT5133=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
