[ALPS05527699] arm64: dts: mt6877: add scp clock control fot ADSP
add scp clock control fot ADSP

MTK-Commit-Id: fb15f90f50cee6cbb4dc892b35e2fe6c05b2e585

Change-Id: I470b3042206b6f4b1310c5f12642891d60374b37
Signed-off-by: Shane.Chien <shane.chien@mediatek.com>
CR-Id: ALPS05527699
Feature: [Module]Audio OpenDSP
(cherry picked from commit 542ad9db1b65465766ac4ed1f4a927e8e4ce6437)

--- a/arch/arm64/boot/dts/mediatek/mt6877.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6877.dts
@@ -2770,12 +2770,14 @@
 			<&scp_par_top_clk CLK_SCP_PAR_RG_AUDIODSP>,
 			<&topckgen_clk CLK_TOP_ADSP_SEL>,
 			<&topckgen_clk CLK_TOP_TCK_26M_MX9>,
-			<&topckgen_clk CLK_TOP_ADSPPLL>;
+			<&topckgen_clk CLK_TOP_ADSPPLL>,
+			<&topckgen_clk CLK_TOP_SCP_SEL>;
 		clock-names = "scp_sys_adsp",
 			"clk_adsp_ck_cg",
 			"clk_top_adsp_sel",
 			"clk_top_clk26m",
-			"clk_top_adsppll";
+			"clk_top_adsppll",
+			"clk_top_scp_sel";
 		adsp-rsv-ipidma-a = <0x200000>;
 		adsp-rsv-logger-a = <0x80000>;
 		adsp-rsv-dbg-dump-a = <0x80000>;
