[ALPS05485788] arm64: dts: mt6877: usb change node name
[Detail]
To conform to selinux policy in engineer mode

MTK-Commit-Id: 7eec1ff3061e2b8068424e0a3f4df93aa11650ee

Change-Id: Ie424ba1f30b098cfbebbdeb7878a87a08c63e12b
Signed-off-by: chihhao.chen <chihhao.chen@mediatek.com>
CR-Id: ALPS05485788
Feature: [Module]USB 2.0

--- a/arch/arm64/boot/dts/mediatek/mt6877.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6877.dts
@@ -5622,7 +5622,7 @@
 		aed = <0x1a>;
 	};
 
-	ssusb: usb@11201000 {
+	mtu3_0: mtu3_0@11201000 {
 		compatible = "mediatek,mt6877-mtu3";
 		reg = <0 0x11201000 0 0x3000>,
 		      <0 0x11203e00 0 0x100>;
