--- a/arch/arm64/configs/k6893v1_64_k510_defconfig
+++ b/arch/arm64/configs/k6893v1_64_k510_defconfig
@@ -7,7 +7,6 @@ CONFIG_UCLAMP_TASK=y
 CONFIG_UCLAMP_GROUPS_COUNT=32
 CONFIG_UCLAMP_MAP_OPP=y
 CONFIG_NONLINEAR_FREQ_CTL=y
-CONFIG_BLK_CGROUP=y
 CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_CPUSETS=y
 CONFIG_SCHED_TUNE=y
@@ -21,14 +20,11 @@ CONFIG_SYSCTL_SYSCALL=y
 # CONFIG_KALLSYMS_BASE_RELATIVE is not set
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
-CONFIG_LTO_CLANG=y
-CONFIG_CFI_CLANG=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
-CONFIG_CFQ_GROUP_IOSCHED=y
-CONFIG_MACH_MT6833=y
+CONFIG_MACH_MT6893=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_PREEMPT=y
@@ -38,7 +34,7 @@ CONFIG_RANDOMIZE_BASE=y
 CONFIG_CMDLINE="console=tty0 console=ttyMT3,921600n1 root=/dev/ram vmalloc=496M slub_max_order=0 slub_debug=O "
 # CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
-CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mediatek/mt6833"
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mediatek/mt6893"
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
 CONFIG_PM_DEBUG=y
@@ -55,6 +51,7 @@ CONFIG_BRIDGE=y
 CONFIG_VLAN_8021Q=y
 CONFIG_CLS_U32_PERF=y
 CONFIG_CLS_U32_MARK=y
+CONFIG_BT=y
 CONFIG_CFG80211=y
 CONFIG_NL80211_TESTMODE=y
 CONFIG_CFG80211_DEVELOPER_WARNINGS=y
@@ -66,51 +63,70 @@ CONFIG_EXTRA_FIRMWARE_DIR="firmware"
 CONFIG_ZRAM=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_MEDIATEK_SOLUTION=y
-CONFIG_MTK_PLATFORM="mt6853"
-CONFIG_ARCH_MTK_PROJECT="k6833v1_64"
+CONFIG_MTK_PLATFORM="mt6885"
+CONFIG_ARCH_MTK_PROJECT="k6893v1_64_k510"
 CONFIG_MTK_AB_OTA_UPDATER=y
 CONFIG_MTK_GPT_SCHEME_SUPPORT=y
 CONFIG_MTK_PMIC_NEW_ARCH=y
 CONFIG_MTK_PMIC_COMMON=y
 CONFIG_MTK_PMIC_CHIP_MT6359P=y
+CONFIG_MTK_EXTBUCK=y
+CONFIG_REGULATOR_MT6691=y
 CONFIG_MTK_EXTERNAL_CHARGER_TYPE_DETECT=y
 CONFIG_MFD_MT6360_PMU=y
 CONFIG_MT6360_PMU_CHARGER=y
 CONFIG_MT6360_PMU_FLED=y
 CONFIG_MT6360_PMIC=y
 CONFIG_MT6360_LDO=y
+CONFIG_MTK_APUSYS_SUPPORT=y
+CONFIG_MTK_APUSYS_DEBUG=y
+CONFIG_MTK_APUSYS_RT_SUPPORT=y
+CONFIG_MTK_APUSYS_MDLA_SUPPORT=y
+CONFIG_MTK_APUSYS_EDMA_SUPPORT=y
 CONFIG_MTK_CPU_FREQ=y
 CONFIG_MTK_PTPOD=y
 CONFIG_MTK_PTPOD_GPU=y
 CONFIG_MTK_STATIC_POWER=y
 CONFIG_MTK_UNIFY_POWER=y
-CONFIG_MTK_SLBC=y
+CONFIG_MTK_SLBC_MMSRAM=y
+CONFIG_MTK_CM_MGR=y
 CONFIG_MTK_THERMAL_PA_VIA_ATCMD=y
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="imx586_mipi_raw imx576_mipi_raw s5k3m5sx_mipi_raw imx481_mipi_raw imx519_mipi_raw imx398_mipi_raw imx350_mipi_raw s5k2l7_mipi_raw imx386_mipi_raw imx386_mipi_mono s5k2t7sp_mipi_raw imx499_mipi_raw"
+CONFIG_MTK_SPMTWAM=y
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5kjd1_mipi_raw ov05a20_mipi_raw imx519_mipi_raw imx586_mipi_raw imx576_mipi_raw imx398_mipi_raw imx350_mipi_raw s5k2l7_mipi_raw imx386_mipi_raw imx481_mipi_raw s5k2t7sp_mipi_raw imx499_mipi_raw imx319_mipi_raw s5k3m5sx_mipi_raw gc02m0_mipi_raw"
 CONFIG_CUSTOM_KERNEL_CAM_CAL_DRV="BRCB032GWZ_3 GT24c32a cat24c16"
 CONFIG_MTK_CAMERA_ISP_RSC_SUPPORT=y
 CONFIG_MTK_CAMERA_ISP_DPE_SUPPORT=y
+CONFIG_MTK_CAMERA_ISP_TSF_SUPPORT=y
 CONFIG_MTK_CAMERA_ISP_FD_SUPPORT=y
+CONFIG_MTK_CAMERA_ISP_WPE_SUPPORT=y
+CONFIG_MTK_CAMERA_ISP_OWE_SUPPORT=y
 CONFIG_MTK_CAMERA_ISP_MFB_SUPPORT=y
 CONFIG_MTK_CAM_CAL=y
 CONFIG_MTK_CMDQ=y
 CONFIG_MTK_CMDQ_MBOX_EXT=y
 CONFIG_MTK_IMGSENSOR=y
+CONFIG_MTK_JPEG=y
 CONFIG_MTK_SMI_EXT=y
-CONFIG_CUSTOM_KERNEL_LCM="nt35695B_fhd_dsi_cmd_auo_rt5081 td4330_fhdp_dsi_cmd_auo_rt5081 ft8756_fhdp_dsi_vdo_auo_rt4801"
+CONFIG_CUSTOM_KERNEL_LCM="td4330_fhdp_dsi_cmd_auo_rt5081"
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
-CONFIG_LCM_HEIGHT="2300"
+CONFIG_LCM_HEIGHT="2280"
 CONFIG_MTK_AAL_SUPPORT=y
-CONFIG_MTK_CAM_SECURITY_SUPPORT=y
-CONFIG_MTK_CAM_GENIEZONE_SUPPORT=y
+CONFIG_MTK_PQ_COLOR_MODE="DISP_MDP"
 CONFIG_MTK_CCU=y
 CONFIG_MTK_SENSOR_SUPPORT=y
 CONFIG_MTK_SENSOR_ARCHITECTURE="2.0"
 CONFIG_CUSTOM_KERNEL_ACCELEROMETER=y
+CONFIG_MTK_ACCELHUB=y
 CONFIG_CUSTOM_KERNEL_ALSPS=y
+CONFIG_MTK_ALSPSHUB=y
 CONFIG_CUSTOM_KERNEL_GYROSCOPE=y
+CONFIG_MTK_GYROHUB=y
 CONFIG_CUSTOM_KERNEL_MAGNETOMETER=y
+CONFIG_MTK_MAGHUB=y
+CONFIG_MTK_HWMON=y
 CONFIG_CUSTOM_KERNEL_BAROMETER=y
+CONFIG_MTK_BAROHUB=y
+CONFIG_CUSTOM_KERNEL_SENSOR_FUSION=y
 CONFIG_CUSTOM_KERNEL_GRV_SENSOR=y
 CONFIG_CUSTOM_KERNEL_GMRV_SENSOR=y
 CONFIG_CUSTOM_KERNEL_RV_SENSOR=y
@@ -120,16 +136,26 @@ CONFIG_CUSTOM_KERNEL_UNCALI_ACC_SENSOR=y
 CONFIG_CUSTOM_KERNEL_UNCALI_GYRO_SENSOR=y
 CONFIG_CUSTOM_KERNEL_UNCALI_MAG_SENSOR=y
 CONFIG_CUSTOM_KERNEL_STEP_COUNTER=y
+CONFIG_MTK_STEPSIGNHUB=y
+CONFIG_CUSTOM_KERNEL_SITUATION=y
+CONFIG_MTK_STATHUB=y
+CONFIG_MTK_WAKEHUB=y
+CONFIG_MTK_GLGHUB=y
+CONFIG_MTK_PICKUPHUB=y
+CONFIG_MTK_DEVICE_ORIENTATION_HUB=y
+CONFIG_MTK_MOTION_DETECT_HUB=y
+CONFIG_MTK_TILTDETECTHUB=y
 CONFIG_CUSTOM_KERNEL_SENSORHUB=y
 CONFIG_MTK_COMBO=y
-CONFIG_MTK_COMBO_CHIP_CONSYS_6833=y
+CONFIG_MTK_COMBO_CHIP_CONSYS_6893=y
+CONFIG_MTK_COMBO_BT=y
 CONFIG_MTK_COMBO_GPS=y
 CONFIG_MTK_COMBO_WIFI=y
 CONFIG_MTK_DHCPV6C_WIFI=y
 CONFIG_MTK_GPS_SUPPORT=y
 CONFIG_MTK_GPS_EMI=y
 CONFIG_MTK_FMRADIO=y
-CONFIG_MTK_FM_CHIP="MT6631_FM"
+CONFIG_MTK_FM_CHIP="MT6635_FM"
 CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
 CONFIG_MTK_MD1_SUPPORT=25
 CONFIG_MTK_ECCCI_DRIVER=y
@@ -156,22 +182,23 @@ CONFIG_MTK_PWM=y
 CONFIG_MTK_CHIP=y
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=y
 CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
+CONFIG_MTK_SCHED_MULTI_GEARS=y
 CONFIG_SCHED_HMP=y
 CONFIG_MTK_SCHED_BOOST=y
 CONFIG_MTK_SCHED_RQAVG_KS=y
 CONFIG_MTK_SCHED_RQAVG_US=y
 CONFIG_MTK_SCHED_CPULOAD=y
-CONFIG_USB_MTK_HDRC=y
-CONFIG_MTK_MUSB_QMU_SUPPORT=y
-CONFIG_MTK_MUSB_QMU_PURE_ZLP_SUPPORT=y
-CONFIG_MTK_MUSB_DRV_36BIT=y
-CONFIG_USB_MTK_OTG=y
+CONFIG_MTK_AURISYS_PHONE_CALL_SUPPORT=y
+CONFIG_MTK_AUDIODSP_SUPPORT=y
 CONFIG_MTK_RAM_CONSOLE=y
 CONFIG_MTK_AEE_FEATURE=y
-# CONFIG_USB_MU3D_DEFAULT_U2_MODE is not set
+CONFIG_MTK_SIB_USB_SWITCH=y
+CONFIG_USB_MU3D_DRV_36BIT=y
 CONFIG_MTK_RTC=y
 CONFIG_MTK_USB_TYPEC_U3_MUX=y
 CONFIG_TCPC_MT6360=y
+CONFIG_MTK_TYPEC_WATER_DETECT=y
+CONFIG_MTK_TYPEC_WATER_DETECT_BY_PCB=y
 CONFIG_TCPC_CLASS=y
 CONFIG_USB_POWER_DELIVERY=y
 CONFIG_MTK_LOAD_TRACKER=y
@@ -182,6 +209,7 @@ CONFIG_MTK_FPSGO_V3=y
 CONFIG_MTK_EARA_THERMAL=y
 CONFIG_MTK_GBE=y
 CONFIG_MTK_PERF_TRACKER=y
+CONFIG_MTK_LOWMEM_HINT=y
 CONFIG_MTPROF=y
 CONFIG_ANDROID_DEFAULT_SETTING=y
 CONFIG_MTK_ANDROID_DEFAULT_SETTING=y
@@ -191,13 +219,13 @@ CONFIG_MTK_TINYSYS_SSPM_SUPPORT=y
 CONFIG_MTK_GPU_SUPPORT=y
 CONFIG_MTK_GPU_VERSION="mali valhall r25p0"
 CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
-CONFIG_MTK_GPU_SWPM_SUPPORT=y
 CONFIG_MTK_VIBRATOR=y
 CONFIG_MTK_SYNC=y
+CONFIG_MTK_VPU_SUPPORT=y
+CONFIG_MTK_VPU_SUPPORT_DEBUG=y
 CONFIG_MTK_DRAM_LOG_STORE=y
 CONFIG_MTK_DRAM_LOG_STORE_ADDR=0x0011DF00
 CONFIG_MTK_DRAM_LOG_STORE_SIZE=0x100
-CONFIG_MTK_CACHE_PARTITION_CTRL=y
 CONFIG_MTK_TINYSYS_MCUPM_SUPPORT=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
@@ -223,6 +251,7 @@ CONFIG_PPP_MULTILINK=y
 CONFIG_PPPOE=y
 CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
+# CONFIG_KEYBOARD_ATKBD is not set
 CONFIG_KEYBOARD_MTK=y
 CONFIG_ONEKEY_REBOOT_NORMAL_MODE=y
 CONFIG_ONEKEY_REBOOT_OTHER_MODE=y
@@ -232,6 +261,9 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_MTK_TOUCH="GT9886 GT9896S"
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
+CONFIG_MTK_FINGERPRINT_SUPPORT=y
+CONFIG_MTK_FINGERPRINT_SELECT="GF3658"
+# CONFIG_SERIO is not set
 # CONFIG_VT is not set
 CONFIG_LEGACY_PTY_COUNT=16
 # CONFIG_DEVMEM is not set
@@ -262,15 +294,12 @@ CONFIG_REGULATOR_MT6315=y
 CONFIG_REGULATOR_MT6359P=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
-CONFIG_MEDIA_CONTROLLER=y
-CONFIG_VIDEO_V4L2_SUBDEV_API=y
-CONFIG_V4L2_FLASH_LED_CLASS=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_MEDIATEK_JPEG=y
+CONFIG_VIDEO_MEDIATEK_VCU_WO_FUSE=y
 CONFIG_VIDEO_MEDIATEK_VCODEC=y
 CONFIG_DRM=y
-CONFIG_DRM_PANEL_NT35695B_AUO_VDO=y
 CONFIG_DRM_PANEL_TRULY_TD4330_VDO=y
 CONFIG_DRM_PANEL_TRULY_FT8756_VDO=y
 CONFIG_DRM_MEDIATEK=y
@@ -287,11 +316,14 @@ CONFIG_SND_DEBUG_VERBOSE=y
 CONFIG_SND_PCM_XRUN_DEBUG=y
 CONFIG_SND_SEQUENCER=y
 CONFIG_SND_SEQ_DUMMY=y
+# CONFIG_SND_SPI is not set
 CONFIG_SND_USB_AUDIO=y
+CONFIG_MTK_UAC_POWER_SAVING=y
 CONFIG_SND_SOC=y
-CONFIG_SND_SOC_MT6833_MT6359=y
+CONFIG_SND_SOC_MT6885_MT6359=y
 CONFIG_SND_SOC_MTK_BTCVSD=y
-CONFIG_SND_SOC_RT5509=y
+CONFIG_SND_SOC_MTK_AUDIO_DSP=y
+CONFIG_SND_SOC_TFA9874=y
 CONFIG_HIDRAW=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_APPLE=y
@@ -318,6 +350,8 @@ CONFIG_HID_SMARTJOYPLUS=y
 CONFIG_HID_TOPSEED=y
 CONFIG_HID_THRUSTMASTER=y
 CONFIG_HID_ZEROPLUS=y
+CONFIG_USB_XHCI_HCD=y
+CONFIG_USB_XHCI_MTK_SUSPEND=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_STORAGE_DATAFAB=y
 CONFIG_USB_STORAGE_FREECOM=y
@@ -330,6 +364,8 @@ CONFIG_USB_STORAGE_ALAUDA=y
 CONFIG_USB_STORAGE_ONETOUCH=y
 CONFIG_USB_STORAGE_KARMA=y
 CONFIG_USB_STORAGE_CYPRESS_ATACB=y
+CONFIG_USB_MTU3=y
+CONFIG_USB_MTU3_PLAT_PHONE=y
 CONFIG_USB_TRANCEVIBRATOR=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_DUAL_ROLE_USB_INTF=y
@@ -341,7 +377,6 @@ CONFIG_USB_CONFIGFS_MASS_STORAGE=y
 CONFIG_USB_CONFIGFS_F_HID=y
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
-CONFIG_MMC_CRYPTO=y
 CONFIG_MMC_MTK_PRO=y
 CONFIG_MTK_EMMC_SUPPORT=y
 CONFIG_MTK_EMMC_CACHE=y
@@ -349,7 +384,6 @@ CONFIG_MTK_EMMC_SUPPORT_OTP=y
 CONFIG_MTK_EMMC_HW_CQ=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
-CONFIG_LEDS_CLASS_FLASH=y
 CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 # CONFIG_RTC_SYSTOHC is not set
@@ -363,12 +397,15 @@ CONFIG_NANOHUB=y
 CONFIG_NANOHUB_MTK_IPI=y
 CONFIG_MAILBOX=y
 CONFIG_MTK_CMDQ_MBOX=y
+CONFIG_MTK_RPMSG_MBOX=y
 CONFIG_MTK_IOMMU_V2=y
 CONFIG_MTK_IOMMU_PGTABLE_EXT=34
 CONFIG_RPMSG_MTK=y
 CONFIG_MTK_PMIC_WRAP=y
 CONFIG_MTK_IPI=y
 CONFIG_MTK_MBOX=y
+CONFIG_EXTCON_MTK_USB=y
+CONFIG_MEDIATEK_MC=y
 CONFIG_IIO=y
 CONFIG_IIO_BUFFER=y
 CONFIG_IIO_KFIFO_BUF=y
@@ -376,6 +413,7 @@ CONFIG_MEDIATEK_MT6577_AUXADC=y
 CONFIG_MT635X_AUXADC=y
 CONFIG_PWM=y
 CONFIG_PWM_MTK_DISP=y
+CONFIG_PHY_MTK_USB=y
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
 CONFIG_INCREMENTAL_FS=y
