[ALPS05496586] DRAM: update dts for freq formula
[Detail]
update dts for freq formula

MTK-Commit-Id: 2f4d7fa9279d69a76c7f9d40be5e4bace01a7f84

Change-Id: Ia0fd894ab1103f5520073455bb7d09446ed36f6f
CR-Id: ALPS05496586
Feature: DRAM
Signed-off-by: Chao Peng <chao.peng@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/mt6833.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6833.dts
@@ -1912,6 +1912,8 @@ page_owner=on loop.max_part=7";
 			 <0x0870 0x00100000 20>;
 		dqopen = <0x0870 0x00200000 21>,
 			 <0x0870 0x00200000 21>;
+		ckdiv4_ca = <0x0b74 0x00000004 2>,
+			 <0x0b74 0x00000004 2>;
 	};
 
 	emichn: emichn@10235000 {
