--- a/arch/arm64/boot/dts/mediatek/mt6833.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6833.dts
@@ -2488,6 +2488,8 @@ page_owner=on loop.max_part=7";
 		mode = <2>;
 		multipoint = <1>;
 		num_eps = <16>;
+		pericfg= <&pericfg>;
+		infracg= <&infracfg_ao>;
 	};
 
 	tcpc_pd: tcpc_pd {
