[ALPS05458793] pnctrl: mediatek: add pinctrl support for MT6885 SoC
This adds MT6885 pinctrl driver based on MediaTek pinctrl-paris core.

MTK-Commit-Id: 5c3dd71e64c199fc2b5a0859f5ab5b43a72febbd

Change-Id: I3390be9026ecfb410963d8a6e671fa2d1a95b6ff
Signed-off-by: Andy Teng <andy.teng@mediatek.com>
CR-Id: ALPS05458793
Feature: Pin Control(pinctrl)

--- a/drivers/pinctrl/mediatek/Kconfig
+++ b/drivers/pinctrl/mediatek/Kconfig
@@ -120,6 +120,16 @@ config PINCTRL_MT6873
 	depends on OF || COMPILE_TEST
 	select PINCTRL_MTK_PARIS
 
+config PINCTRL_MT6885
+	tristate "Mediatek MT6885 pin control"
+	depends on OF || COMPILE_TEST
+	select PINCTRL_MTK_PARIS
+	help
+	  This is the pin controller and gpio driver for mediatek
+	  mt6885 chipset. It will enable mediatek common v2,
+	  paris and eint core driver.
+	  Say Y here to enable it.
+
 config PINCTRL_MT7622
 	bool "MediaTek MT7622 pin control"
 	depends on OF
