[ALPS05463487] arm64: dts: mt6893: DTS update
 complete HS related modules

 a. align 4110268
 b. cherry-pick 4132294
 c. cherry-pick 4136606
 d. cherry-pick 4136609
 e. fix build error

MTK-Commit-Id: 308a323fac2200ce2604a439df691aeeb90da3d9

Change-Id: I5a512720959545ca81962f46c098e902512250f7
Signed-off-by: YC <yu-chang.wang@mediatek.com>
CR-Id: ALPS05463487
Feature: [Module]Kernel Maintenance

--- a/arch/arm64/boot/dts/mediatek/mt6359p.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6359p.dtsi
@@ -353,6 +353,9 @@
 		mt6359prtc: mt6359prtc {
 			compatible = "mediatek,mt6359p-rtc";
 
+			#address-cells = <1>;
+			#size-cells = <1>;
+
 			fg_init: fg_init {
 				reg = <0 0x1>;
 				bits = <0 8>;
@@ -449,8 +452,6 @@
 					"pmic_battery_voltage",
 					"pmic_bif_voltage",
 					"pmic_ptim_voltage";
-			nvmem-cells = <&fg_init>, <&fg_soc>;
-			nvmem-cell-names = "initialization", "state-of-charge";
 		};
 		mt6359keys: mt6359keys {
 			compatible = "mediatek,mt6359p-keys";
