--- a/arch/arm64/boot/dts/mediatek/k6893v1_64.dts
+++ b/arch/arm64/boot/dts/mediatek/k6893v1_64.dts
@@ -7,8 +7,8 @@
 /plugin/;
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/interrupt-controller/irq.h>
-#include <dt-bindings/pinctrl/mt6873-pinfunc.h>
-#include <dt-bindings/clock/mt6873-clk.h>
+#include <dt-bindings/pinctrl/mt6885-pinfunc.h>
+#include <dt-bindings/clock/mt6893-clk.h>
 
 &gpio_usage_mapping {
 	GPIO_SIM1_HOT_PLUG = <&pio 43 0>;
@@ -242,7 +242,7 @@
 		<227 0 0 0 1 0 0>;
 };
 
-#include "mediatek/cust_mt6873_touch_1080x2280.dtsi"
+#include "mediatek/cust_mt6893_touch_1080x2300.dtsi"
 
 &chosen {
 	atag,videolfb-fb_base_l = <0x7e605000>;
@@ -339,7 +339,7 @@
 	status = "okay";
 	#address-cells = <1>;
 	#size-cells = <0>;
-	panel@0 {
+	panel1@0 {
 		compatible = "truly,td4330,vdo";
 		reg = <0>;
 		pm-enable-gpios = <&pio 41 0>;
@@ -348,7 +348,21 @@
 			<&pio 29 0>;
 		pinctrl-names = "default";
 		port {
-			panel_in: endpoint {
+			panel_in1: endpoint {
+				remote-endpoint = <&dsi_out>;
+			};
+		};
+	};
+	panel2@0 {
+		compatible = "truly,ft8756,vdo";
+		reg = <1>;
+		pm-enable-gpios = <&pio 41 0>;
+		reset-gpios = <&pio 42 0>;
+		bias-gpios = <&pio 28 0>,
+			<&pio 29 0>;
+		pinctrl-names = "default";
+		port {
+			panel_in2: endpoint {
 				remote-endpoint = <&dsi_out>;
 			};
 		};
@@ -356,7 +370,7 @@
 	ports {
 		port {
 			dsi_out: endpoint {
-				remote-endpoint = <&panel_in>;
+				remote-endpoint = <&panel_in2>;
 			};
 		};
 	};
