--- a/arch/arm64/configs/k6893v1_64_defconfig
+++ b/arch/arm64/configs/k6893v1_64_defconfig
@@ -1,3 +1,60 @@
 CONFIG_ARCH_MEDIATEK=y
 CONFIG_MEDIATEK_WATCHDOG=m
 CONFIG_MTK_DEVINFO=m
+CONFIG_COMMON_CLK_MT6893=m
+CONFIG_COMMON_CLK_MT6893_APU0=m
+CONFIG_COMMON_CLK_MT6893_APU1=m
+CONFIG_COMMON_CLK_MT6893_APU2=m
+CONFIG_COMMON_CLK_MT6893_APU_VCORE=m
+CONFIG_COMMON_CLK_MT6893_APU_CONN=m
+CONFIG_COMMON_CLK_MT6893_APU_MDLA0=m
+CONFIG_COMMON_CLK_MT6893_APU_MDLA1=m
+CONFIG_COMMON_CLK_MT6893_AUDIOSYS=m
+CONFIG_COMMON_CLK_MT6893_CAMSYS_MAIN=m
+CONFIG_COMMON_CLK_MT6893_CAMSYS_RAWA=m
+CONFIG_COMMON_CLK_MT6893_CAMSYS_RAWB=m
+CONFIG_COMMON_CLK_MT6893_CAMSYS_RAWC=m
+CONFIG_COMMON_CLK_MT6893_IMGSYS1=m
+CONFIG_COMMON_CLK_MT6893_IMGSYS2=m
+CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_C=m
+CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_E=m
+CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_N=m
+CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_S=m
+CONFIG_COMMON_CLK_MT6893_IPESYS=m
+CONFIG_COMMON_CLK_MT6893_MDPSYS=m
+CONFIG_COMMON_CLK_MT6893_MFGCFG=m
+CONFIG_COMMON_CLK_MT6893_MMSYS=m
+CONFIG_COMMON_CLK_MT6893_SCP_ADSP=m
+CONFIG_COMMON_CLK_MT6893_VDECSYS=m
+CONFIG_COMMON_CLK_MT6893_VDECSYS_SOC=m
+CONFIG_COMMON_CLK_MT6893_VENCSYS_C1=m
+CONFIG_COMMON_CLK_MT6893_VENCSYS=m
+CONFIG_MTK_SCPSYS=m
+CONFIG_SCSI_UFS_MEDIATEK=m
+CONFIG_SCSI_UFS_MEDIATEK_DBG=m
+CONFIG_SERIAL_8250_NR_UARTS=2
+CONFIG_SERIAL_8250_RUNTIME_UARTS=2
+CONFIG_SERIAL_8250_MT6577=m
+CONFIG_MTK_UART_APDMA=m
+CONFIG_USB_MTU3=m
+CONFIG_PHY_MTK_TPHY=m
+CONFIG_MTK_PMIC_WRAP=m
+CONFIG_MFD_MT6397=m
+CONFIG_REGULATOR_MT6315=m
+CONFIG_REGULATOR_MT6359P=m
+CONFIG_MT635X_EFUSE=m
+CONFIG_MEDIATEK_MT635X_AUXADC=m
+CONFIG_SPMI_MTK_PMIF=m
+CONFIG_MFD_MTK_SPMI_PMIC=m
+# CONFIG_PINCTRL_MT2712 is not set
+# CONFIG_PINCTRL_MT6797 is not set
+CONFIG_PINCTRL_MT6885=m
+# CONFIG_PINCTRL_MT7622 is not set
+# CONFIG_PINCTRL_MT8173 is not set
+# CONFIG_PINCTRL_MT8183 is not set
+# CONFIG_PINCTRL_MT8516 is not set
+# CONFIG_PINCTRL_MT6397 is not set
+CONFIG_KEYBOARD_MTK_KPD=m
+CONFIG_KEYBOARD_MTK_PMIC=m
+CONFIG_LEDS_REGULATOR_VIBRATOR=m
+CONFIG_I2C_MT65XX=m
