[ALPS05454730] clk: mediatek: mt6893: add clock driver
1. add platform clk driver.
2. update makefile/kconfig..

MTK-Commit-Id: 21c24ff96ea5b2c8f717c2bdb2d5d20d65fc2907

Change-Id: I0acd059173e5dc6bf30ee3e3c393f9ee4216dede
Signed-off-by: Owen Chen <owen.chen@mediatek.com>
CR-Id: ALPS05454730
Feature: [Module]Clock Management

--- a/drivers/clk/mediatek/Makefile
+++ b/drivers/clk/mediatek/Makefile
@@ -63,6 +63,34 @@ obj-$(CONFIG_COMMON_CLK_MT6853_MMSYS_CONFIG) += clk-mt6853-mm.o
 obj-$(CONFIG_COMMON_CLK_MT6853_SCP_ADSP) += clk-mt6853-scp_par.o
 obj-$(CONFIG_COMMON_CLK_MT6853_VDEC_GCON) += clk-mt6853-vdec.o
 obj-$(CONFIG_COMMON_CLK_MT6853_VENC_GCON) += clk-mt6853-venc.o
+obj-$(CONFIG_COMMON_CLK_MT6893) += clk-mt6893.o
+obj-$(CONFIG_COMMON_CLK_MT6893_APU0) += clk-mt6893-apu0.o
+obj-$(CONFIG_COMMON_CLK_MT6893_APU1) += clk-mt6893-apu1.o
+obj-$(CONFIG_COMMON_CLK_MT6893_APU2) += clk-mt6893-apu2.o
+obj-$(CONFIG_COMMON_CLK_MT6893_APU_VCORE) += clk-mt6893-apuv.o
+obj-$(CONFIG_COMMON_CLK_MT6893_APU_CONN) += clk-mt6893-apuc.o
+obj-$(CONFIG_COMMON_CLK_MT6893_APU_MDLA0) += clk-mt6893-apum0.o
+obj-$(CONFIG_COMMON_CLK_MT6893_APU_MDLA1) += clk-mt6893-apum1.o
+obj-$(CONFIG_COMMON_CLK_MT6893_AUDIOSYS) += clk-mt6893-audsys.o
+obj-$(CONFIG_COMMON_CLK_MT6893_CAMSYS_MAIN) += clk-mt6893-cam_m.o
+obj-$(CONFIG_COMMON_CLK_MT6893_CAMSYS_RAWA) += clk-mt6893-cam_ra.o
+obj-$(CONFIG_COMMON_CLK_MT6893_CAMSYS_RAWB) += clk-mt6893-cam_rb.o
+obj-$(CONFIG_COMMON_CLK_MT6893_CAMSYS_RAWC) += clk-mt6893-cam_rc.o
+obj-$(CONFIG_COMMON_CLK_MT6893_IMGSYS1) += clk-mt6893-imgsys1.o
+obj-$(CONFIG_COMMON_CLK_MT6893_IMGSYS2) += clk-mt6893-imgsys2.o
+obj-$(CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_C) += clk-mt6893-impc.o
+obj-$(CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_E) += clk-mt6893-impe.o
+obj-$(CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_N) += clk-mt6893-impn.o
+obj-$(CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_S) += clk-mt6893-imps.o
+obj-$(CONFIG_COMMON_CLK_MT6893_IPESYS) += clk-mt6893-ipe.o
+obj-$(CONFIG_COMMON_CLK_MT6893_MDPSYS) += clk-mt6893-mdp.o
+obj-$(CONFIG_COMMON_CLK_MT6893_MFGCFG) += clk-mt6893-mfgcfg.o
+obj-$(CONFIG_COMMON_CLK_MT6893_MMSYS) += clk-mt6893-mm.o
+obj-$(CONFIG_COMMON_CLK_MT6893_SCP_ADSP) += clk-mt6893-scp_adsp.o
+obj-$(CONFIG_COMMON_CLK_MT6893_VDECSYS) += clk-mt6893-vde2.o
+obj-$(CONFIG_COMMON_CLK_MT6893_VDECSYS_SOC) += clk-mt6893-vde1.o
+obj-$(CONFIG_COMMON_CLK_MT6893_VENCSYS_C1) += clk-mt6893-ven2.o
+obj-$(CONFIG_COMMON_CLK_MT6893_VENCSYS) += clk-mt6893-ven1.o
 obj-$(CONFIG_COMMON_CLK_MT7622) += clk-mt7622.o
 obj-$(CONFIG_COMMON_CLK_MT7622_ETHSYS) += clk-mt7622-eth.o
 obj-$(CONFIG_COMMON_CLK_MT7622_HIFSYS) += clk-mt7622-hif.o
