--- a/drivers/clk/mediatek/Kconfig
+++ b/drivers/clk/mediatek/Kconfig
@@ -504,6 +504,260 @@ config COMMON_CLK_MT6853_VENC_GCON
 	  If you wish to use clock resources from the venc_gcon device,
 	  say Y. Otherwise, say N.
 
+config COMMON_CLK_MT6893
+	tristate "Clock driver for MediaTek MT6893"
+	depends on ARM64 || COMPILE_TEST
+	select COMMON_CLK_MEDIATEK
+	default MACH_MT6893
+	help
+	  This driver supports MediaTek MT6893 basic clocks,
+	  which is used to control basic clock output.
+	  If you wish to use clock resources from the MT6893 SOC,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_APU0
+	tristate "Clock driver for MediaTek MT6893 apu0"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 apu0 clocks,
+	  which is used to control apu0 clock output.
+	  If you wish to use clock resources from the apu0 device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_APU1
+	tristate "Clock driver for MediaTek MT6893 apu1"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 apu1 clocks,
+	  which is used to control apu1 clock output.
+	  If you wish to use clock resources from the apu1 device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_APU2
+	tristate "Clock driver for MediaTek MT6893 apu2"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 apu2 clocks,
+	  which is used to control apu2 clock output.
+	  If you wish to use clock resources from the apu2 device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_APU_VCORE
+	tristate "Clock driver for MediaTek MT6893 apu_vcore"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 apu_vcore clocks,
+	  which is used to control apu_vcore clock output.
+	  If you wish to use clock resources from the apu_vcore device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_APU_CONN
+	tristate "Clock driver for MediaTek MT6893 apu_conn"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 apu_conn clocks,
+	  which is used to control apu_conn clock output.
+	  If you wish to use clock resources from the apu_conn device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_APU_MDLA0
+	tristate "Clock driver for MediaTek MT6893 apu_mdla0"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 apu_mdla0 clocks,
+	  which is used to control apu_mdla0 clock output.
+	  If you wish to use clock resources from the apu_mdla0 device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_APU_MDLA1
+	tristate "Clock driver for MediaTek MT6893 apu_mdla1"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 apu_mdla1 clocks,
+	  which is used to control apu_mdla1 clock output.
+	  If you wish to use clock resources from the apu_mdla1 device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_AUDIOSYS
+	tristate "Clock driver for MediaTek MT6893 audiosys"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 audiosys clocks,
+	  which is used to control audiosys clock output.
+	  If you wish to use clock resources from the audiosys device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_CAMSYS_MAIN
+	tristate "Clock driver for MediaTek MT6893 camsys_main"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 camsys_main clocks,
+	  which is used to control camsys_main clock output.
+	  If you wish to use clock resources from the camsys_main device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_CAMSYS_RAWA
+	tristate "Clock driver for MediaTek MT6893 camsys_rawa"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 camsys_rawa clocks,
+	  which is used to control camsys_rawa clock output.
+	  If you wish to use clock resources from the camsys_rawa device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_CAMSYS_RAWB
+	tristate "Clock driver for MediaTek MT6893 camsys_rawb"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 camsys_rawb clocks,
+	  which is used to control camsys_rawb clock output.
+	  If you wish to use clock resources from the camsys_rawb device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_CAMSYS_RAWC
+	tristate "Clock driver for MediaTek MT6893 camsys_rawc"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 camsys_rawc clocks,
+	  which is used to control camsys_rawc clock output.
+	  If you wish to use clock resources from the camsys_rawc device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_IMGSYS1
+	tristate "Clock driver for MediaTek MT6893 imgsys1"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 imgsys1 clocks,
+	  which is used to control imgsys1 clock output.
+	  If you wish to use clock resources from the imgsys1 device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_IMGSYS2
+	tristate "Clock driver for MediaTek MT6893 imgsys2"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 imgsys2 clocks,
+	  which is used to control imgsys2 clock output.
+	  If you wish to use clock resources from the imgsys2 device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_IMP_IIC_WRAP_C
+	tristate "Clock driver for MediaTek MT6893 imp_iic_wrap_c"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 imp_iic_wrap_c clocks,
+	  which is used to control imp_iic_wrap_c clock output.
+	  If you wish to use clock resources from the imp_iic_wrap_c device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_IMP_IIC_WRAP_E
+	tristate "Clock driver for MediaTek MT6893 imp_iic_wrap_e"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 imp_iic_wrap_e clocks,
+	  which is used to control imp_iic_wrap_e clock output.
+	  If you wish to use clock resources from the imp_iic_wrap_e device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_IMP_IIC_WRAP_N
+	tristate "Clock driver for MediaTek MT6893 imp_iic_wrap_n"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 imp_iic_wrap_n clocks,
+	  which is used to control imp_iic_wrap_n clock output.
+	  If you wish to use clock resources from the imp_iic_wrap_n device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_IMP_IIC_WRAP_S
+	tristate "Clock driver for MediaTek MT6893 imp_iic_wrap_s"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 imp_iic_wrap_s clocks,
+	  which is used to control imp_iic_wrap_s clock output.
+	  If you wish to use clock resources from the imp_iic_wrap_s device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_IPESYS
+	tristate "Clock driver for MediaTek MT6893 ipesys"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 ipesys clocks,
+	  which is used to control ipesys clock output.
+	  If you wish to use clock resources from the ipesys device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_MDPSYS
+	tristate "Clock driver for MediaTek MT6893 mdpsys"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 mdpsys clocks,
+	  which is used to control mdpsys clock output.
+	  If you wish to use clock resources from the mdpsys device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_MFGCFG
+	tristate "Clock driver for MediaTek MT6893 mfgcfg"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 mfgcfg clocks,
+	  which is used to control mfgcfg clock output.
+	  If you wish to use clock resources from the mfgcfg device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_MMSYS
+	tristate "Clock driver for MediaTek MT6893 mmsys"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 mmsys clocks,
+	  which is used to control mmsys clock output.
+	  If you wish to use clock resources from the mmsys device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_SCP_ADSP
+	tristate "Clock driver for MediaTek MT6893 scp_adsp"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 scp_adsp clocks,
+	  which is used to control scp_adsp clock output.
+	  If you wish to use clock resources from the scp_adsp device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_VDECSYS
+	tristate "Clock driver for MediaTek MT6893 vdecsys"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 vdecsys clocks,
+	  which is used to control vdecsys clock output.
+	  If you wish to use clock resources from the vdecsys device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_VDECSYS_SOC
+	tristate "Clock driver for MediaTek MT6893 vdecsys_soc"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 vdecsys_soc clocks,
+	  which is used to control vdecsys_soc clock output.
+	  If you wish to use clock resources from the vdecsys_soc device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_VENCSYS_C1
+	tristate "Clock driver for MediaTek MT6893 vencsys_c1"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 vencsys_c1 clocks,
+	  which is used to control vencsys_c1 clock output.
+	  If you wish to use clock resources from the vencsys_c1 device,
+	  say Y. Otherwise, say N.
+
+config COMMON_CLK_MT6893_VENCSYS
+	tristate "Clock driver for MediaTek MT6893 vencsys"
+	depends on COMMON_CLK_MT6893
+	help
+	  This driver supports MediaTek MT6893 vencsys clocks,
+	  which is used to control vencsys clock output.
+	  If you wish to use clock resources from the vencsys device,
+	  say Y. Otherwise, say N.
+
 config COMMON_CLK_MT7622
 	bool "Clock driver for MediaTek MT7622"
 	depends on ARM || ARM64 || COMPILE_TEST
