[ALPS05549473] cmdq: porting for mt6885/mt6893
porting cmdq for mt6885/mt6893

MTK-Commit-Id: e03d7525ad20eff1edb7be2ac51b080f02632a70

Change-Id: I69df07ec8dca77f6d8fc78753bf8ff4eb04c29db
Signed-off-by: “jayce.hsu” <jayce.hsu@mediatek.com>
CR-Id: ALPS05549473
Feature: [Module]CMDQ Driver

--- a/drivers/misc/mediatek/cmdq/mailbox/Makefile
+++ b/drivers/misc/mediatek/cmdq/mailbox/Makefile
@@ -31,3 +31,4 @@ obj-$(CONFIG_MTK_CMDQ_MBOX_EXT) += cmdq-test.o
 obj-$(CONFIG_MTK_CMDQ_MBOX_EXT) += cmdq-util.o
 obj-$(CONFIG_MTK_CMDQ_MBOX_EXT) += cmdq-platform-mt6873.o
 obj-$(CONFIG_MTK_CMDQ_MBOX_EXT) += cmdq-platform-mt6853.o
+obj-$(CONFIG_MTK_CMDQ_MBOX_EXT) += cmdq-platform-mt6885.o
