[ALPS05548979] GPU: gpufreq_v1: add mt6893 platform
move mt6893 platform from
1. kernel-4.14/drivers/misc/mediatek/base/power/gpufreq_v1/mt6893
2. kernel-4.14/drivers/misc/mediatek/base/power/include/
   gpufreq_v1/mt6893

include:
1. 4033697-GPU: gpufreq_v1: add mt6893 platform
2. 4034372-GPU: gpufreq_v1: modify as ko mode
3. 4034416-GPU: gpufreq_v1: ctl on
4. 4034420-GPU: gpufreq_v1: fix build warning
5. 4036518-GPU: fix probe error
6. 4078658-GPU: dfd config is not correct
7. 4099097-GPU: gpufreq_v1: fix build warning
8. 4149317-GPU: fix kernel-5.10 build error

MTK-Commit-Id: 3434329fe06d25f1391dff991708c2d3dc90954f

Change-Id: Iba0e6f6eb5b164141415f40337d554a70d177e93
Signed-off-by: Susan Su <Susan.Su@mediatek.com>
CR-Id: ALPS05548979
Feature: GPU ARM(gpu_arm)

--- a/drivers/gpu/mediatek/Makefile
+++ b/drivers/gpu/mediatek/Makefile
@@ -23,6 +23,8 @@ endif
 
 ifeq ($(MTK_PLATFORM),mt6873)
 subdir-ccflags-y += -DCONFIG_MACH_MT6873
+else ifeq ($(MTK_PLATFORM),mt6893)
+subdir-ccflags-y += -DCONFIG_MACH_MT6893
 else ifeq ($(MTK_PLATFORM),mt6853)
 subdir-ccflags-y += -DCONFIG_MACH_MT6853
 endif
