[ALPS05548979] GPU: gpu kernel code: add mt6893 platform
move mt6893 platform from
kernel-4.14driversmiscmediatekgpugpu_malimali_valhall
mali-r25p0driversgpuarmmidgardplatformmt6893

include:
1. 4033827-GPU: gpu kernel code: add mt6893 platform
2. 4034623-GPU: gpu kernel code: fix build error
3. 4034626-GPU: gpu kernel code: add mt6893 to env
4. 4034632-GPU: gpu_bm: MTK_QOS_FRAMEWORK config
5. 4070521-GPU: gpu_bm: disable gpu_bm
6. 4078324-GPU: disable gpu_bm on mt6873,mt6853

MTK-Commit-Id: fa4896aa0f6df3b59f8e205ed3fa423f18960399

Change-Id: I189458803d55bf74f54ebee29e2ef18156afd89c
Signed-off-by: Susan Su <Susan.Su@mediatek.com>
CR-Id: ALPS05548979
Feature: GPU ARM(gpu_arm)

--- a/drivers/gpu/mediatek/gpu_bm/Makefile
+++ b/drivers/gpu/mediatek/gpu_bm/Makefile
@@ -18,7 +18,7 @@ ccflags-y += -I$(srctree)/drivers/gpu/mediatek/gpufreq_v1/include/
 ccflags-y += -I$(srctree)/drivers/gpu/mediatek/
 
 ifneq ($(CONFIG_MTK_GPU_SUPPORT),)
-ccflags-y += -DMTK_QOS_FRAMEWORK
+ccflags-$(CONFIG_MTK_QOS_FRAMEWORK) += -DMTK_QOS_FRAMEWORK
 $(info *GPU BM QoS 2.0 QOS Framework defined)
 endif
 
