[ALPS05534165] devapc: add mt6893 support
Add devpac driver to handle permission control

MTK-Commit-Id: d58045b07e040ec8e8dd59a896c67d19ec0e4df6

Change-Id: I33571d4f9e9581febcac2c5c17474da598f21ceb
Signed-off-by: Jackson Chang <jackson-kt.chang@mediatek.com>
CR-Id: ALPS05534165
Feature: [Module]Device APC

--- a/drivers/soc/mediatek/devapc/Kconfig
+++ b/drivers/soc/mediatek/devapc/Kconfig
@@ -33,3 +33,13 @@ config DEVAPC_MT6873
 	  Device APC driver.
 	  This driver is combined with DEVAPC_ARCH_MULTI for
 	  common handle flow.
+
+config DEVAPC_MT6885
+	tristate "Mediatek MT6885 Device APC driver"
+	select MTK_DEVAPC
+	select DEVAPC_ARCH_MULTI
+	help
+	  Say yes here to enable support Mediatek MT6885
+	  Device APC driver.
+	  This driver is combined with DEVAPC_ARCH_MULTI for
+	  common handle flow.
