--- a/drivers/soc/mediatek/devapc/Makefile
+++ b/drivers/soc/mediatek/devapc/Makefile
@@ -13,3 +13,5 @@ devapc-$(CONFIG_DEVAPC_ARCH_MULTI) += devapc-mtk-multi-ao.o
 devapc-$(CONFIG_DEVAPC_MT6873) += devapc-mt6873.o
 
 devapc-$(CONFIG_DEVAPC_MT6853) += devapc-mt6853.o
+
+devapc-$(CONFIG_DEVAPC_MT6885) += devapc-mt6885.o
