[ALPS05542885] arm64: configs: mt6893: enable SOC temperature
CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=100
CONFIG_THERMAL_WRITABLE_TRIPS=y
CONFIG_THERMAL_EMULATION=y
CONFIG_GENERIC_ADC_THERMAL=m
CONFIG_RESET_TI_SYSCON=m
CONFIG_MTK_THERMAL=y
CONFIG_MTK_SOC_THERMAL_LVTS=m
CONFIG_MTK_PMIC_THERMAL=m
CONFIG_MTK_MD_THERMAL=m
CONFIG_MTK_THERMAL_TRACE=m

MTK-Commit-Id: c32973ce6a62427d2069a43f354b14d6a7d3e1e2

Change-Id: I4c8fb6067e7467e73d5ed82b7a1a9cb9c6531658
Signed-off-by: Samuel Hsieh <samuel.hsieh@mediatek.com>
CR-Id: ALPS05542885
Feature: Thermal Management

--- a/arch/arm64/configs/k6893v1_64_defconfig
+++ b/arch/arm64/configs/k6893v1_64_defconfig
@@ -64,6 +64,10 @@ CONFIG_PINCTRL_MT6885=m
 # CONFIG_PINCTRL_MT6397 is not set
 CONFIG_KEYBOARD_MTK_KPD=m
 CONFIG_KEYBOARD_MTK_PMIC=m
+CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=100
+CONFIG_THERMAL_WRITABLE_TRIPS=y
+CONFIG_THERMAL_EMULATION=y
+CONFIG_GENERIC_ADC_THERMAL=m
 CONFIG_LEDS_PWM=m
 CONFIG_LEDS_REGULATOR_VIBRATOR=m
 CONFIG_I2C_MT65XX=m
@@ -83,6 +87,12 @@ CONFIG_MTK_CHARGER=m
 CONFIG_MTK_PUMP_EXPRESS_PLUS_20_SUPPORT=m
 CONFIG_MTK_PUMP_EXPRESS_PLUS_SUPPORT=m
 CONFIG_MTK_PUMP_EXPRESS_40_SUPPORT=m
+CONFIG_RESET_TI_SYSCON=m
+CONFIG_MTK_THERMAL=y
+CONFIG_MTK_SOC_THERMAL_LVTS=m
+CONFIG_MTK_PMIC_THERMAL=m
+CONFIG_MTK_MD_THERMAL=m
+CONFIG_MTK_THERMAL_TRACE=m
 CONFIG_TCPC_CLASS=m
 CONFIG_TCPC_MT6360=m
 CONFIG_USB_POWER_DELIVERY=m
