[ALPS05553105] arm64: configs: mt6893: enable Connsys
CONFIG_MTK_BTIF=m
CONFIG_MTK_COMBO=m
CONFIG_MTK_COMBO_CHIP_CONSYS_6893=y
CONFIG_MTK_COMBO_BT=m
CONFIG_MTK_COMBO_GPS=m
CONFIG_MTK_COMBO_WIFI=m
CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
CONFIG_MTK_DHCPV6C_WIFI=y
CONFIG_MTK_GPS_SUPPORT=y
CONFIG_MTK_GPS_EMI=m
CONFIG_MTK_FMRADIO=m
CONFIG_MTK_FM_CHIP="MT6635_FM"

MTK-Commit-Id: 4e4d33e6eea595123e0d5d23ac2239b385fd1dcd

Change-Id: Iac68f92e1e7f5b5228afea9222584058358c6ef4
Signed-off-by: Tim Chang <tim.chang@mediatek.com>
CR-Id: ALPS05553105
Feature: [Module]Conninfra Driver

--- a/arch/arm64/configs/k6893v1_64_defconfig
+++ b/arch/arm64/configs/k6893v1_64_defconfig
@@ -111,3 +111,16 @@ CONFIG_DRM_PANEL_TRULY_TD4330_VDO=m
 CONFIG_DRM_PANEL_TRULY_FT8756_VDO=m
 CONFIG_MTK_GPU_SUPPORT=m
 CONFIG_MTK_GPU_VERSION="mali valhall r25p0 mt6893"
+CONFIG_MTK_BTIF=m
+CONFIG_MTK_COMBO=m
+CONFIG_MTK_COMBO_CHIP_CONSYS_6893=y
+CONFIG_MTK_COMBO_BT=m
+CONFIG_MTK_COMBO_GPS=m
+CONFIG_MTK_COMBO_WIFI=m
+CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
+CONFIG_MTK_DHCPV6C_WIFI=y
+CONFIG_MTK_GPS_SUPPORT=y
+CONFIG_MTK_GPS_EMI=m
+CONFIG_MTK_FMRADIO=m
+CONFIG_MTK_FM_CHIP="MT6635_FM"
+
